--- a/AnimeHubClient/Layout/NavMenu.razor
+++ b/AnimeHubClient/Layout/NavMenu.razor
@@ -19,6 +19,11 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Fetch Anime
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="add-anime">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Add Anime
+            </NavLink>
+        </div>
     </nav>
 </div>
 
