--- a/AnimeHubClient/Pages/FetchAnime.razor
+++ b/AnimeHubClient/Pages/FetchAnime.razor
@@ -1,6 +1,8 @@
 ﻿@page "/fetchanime"
 @using AnimeHubApi.Models
 @inject HttpClient Http
+@inject NavigationManager Navigation
+@inject IJSRuntime JSRuntime
 
 <h3>Anime List</h3>
 
@@ -29,13 +31,17 @@ else
                     <td>@anime.Genre</td>
                     <td>@anime.Episodes</td>
                     <td>@anime.YearPublished</td>
+                    <td>
+                        <a href="@($"update-anime/{anime.Id}")" class="btn btn-primary">Update</a>
+                    </td>
+                    <td>
+                        <button class="btn btn-danger" @onclick="() => DeleteAnime(anime.Id)">Delete</button>
+                    </td>
                 </tr>
             }
         </tbody>
     </table>
 }
-
-
 
 @code {
     private List<Anime>? animeList;
@@ -50,6 +56,17 @@ else
         {
             Console.Error.WriteLine($"Error fetching anime data: {ex.Message}");
         }
+    }
 
+    private async Task DeleteAnime(int id)
+    {
+        var confirmed = await JSRuntime.InvokeAsync<bool>("confirm", "Are you sure you want to delete this anime?");
+
+        if (confirmed)
+        {
+            await Http.DeleteAsync($"api/anime/{id}");
+
+            Navigation.NavigateTo(Navigation.Uri, forceLoad: true);
+        }
     }
 }
