CRUD for category

--- a/AnimeHubClient/Pages/AddAnime.razor
+++ b/AnimeHubClient/Pages/AddAnime.razor
@@ -1,5 +1,5 @@
 ﻿@page "/add-anime"
-@using AnimeHubApi.Models
+@using AnimeHub.Shared.Models
 @inject HttpClient Http
 @inject NavigationManager Navigation
 
