--- a/AnimeHubClient/Pages/FetchAnime.razor
+++ b/AnimeHubClient/Pages/FetchAnime.razor
@@ -1,5 +1,5 @@
 ﻿@page "/fetchanime"
-@using AnimeHubApi.Models
+@using AnimeHub.Shared.Models
 @inject HttpClient Http
 @inject NavigationManager Navigation
 @inject IJSRuntime JSRuntime
