--- a/AnimeHubClient/Pages/UpdateAnime.razor
+++ b/AnimeHubClient/Pages/UpdateAnime.razor
@@ -1,5 +1,5 @@
 ﻿@page "/update-anime/{Id:int}"
-@using AnimeHubApi.Models
+@using AnimeHub.Shared.Models
 @inject HttpClient Http
 @inject NavigationManager Navigation
 
