--- a/AnimeHubClient/Pages/Home.razor
+++ b/AnimeHubClient/Pages/Home.razor
@@ -2,6 +2,23 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<header class="header">
+    <section class="flex">
+        <div class="logo">
+            <div id="menu-btn" class="fas fa-bars-staggered"></div>
+            <a href="/">AnimeHub</a>
+        </div>
 
-Welcome to your new app.
+        <div class="search-form">
+            <form action="" class="search-bar">
+                <input type="search" placeholder="Search anime..." id="searchBox" maxlength="100" />
+                <label for="searchBox" class="fas fa-search"></label>
+            </form>
+            <a href="filter.razor" class="fas fa-filter"></a>
+        </div>
+
+        <a href="login.razor"><i class="fas fa-user"></i>Login</a>
+
+        <div id="search-toggler" class="fas fa-search"></div>
+    </section>
+</header>
