--- a/AnimeHubClient/Pages/Home.razor
+++ b/AnimeHubClient/Pages/Home.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@* @page "/"
 
 <PageTitle>Home</PageTitle>
 
@@ -21,4 +21,4 @@
 
         <div id="search-toggler" class="fas fa-search"></div>
     </section>
-</header>
+</header> *@
