--- a/AnimeHubClient/Layout/NavMenu.razor
+++ b/AnimeHubClient/Layout/NavMenu.razor
@@ -20,8 +20,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchanime">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Fetch Anime
+            <NavLink class="nav-link" href="anime">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Anime
             </NavLink>
         </div>
         <div class="nav-item px-3">
