--- a/AnimeHubClient/Layout/MainLayout.razor
+++ b/AnimeHubClient/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
-﻿@inherits LayoutComponentBase
+﻿
+@inherits LayoutComponentBase
 
 @* Required *@
 <MudThemeProvider />
@@ -11,8 +12,8 @@
 <MudSnackbarProvider />
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
+    <div class="navbar">
+        <TopNav />
     </div>
 
     <main>
