--- a/AnimeHubClient/_Imports.razor
+++ b/AnimeHubClient/_Imports.razor
@@ -9,4 +9,9 @@
 @using AnimeHubClient
 @using AnimeHubClient.Layout
 @using AnimeHub.Shared.Models
+@using AnimeHub.Shared.Models.Dtos.Anime
+@using AnimeHub.Shared.Models.Dtos.Category
+@using AnimeHub.Shared.Models.Dtos.Genre
 @using MudBlazor
+@using MudBlazor.Services
+@using AnimeHubClient.Shared
