--- a/AnimeHubClient/Layout/NavMenu.razor
+++ b/AnimeHubClient/Layout/NavMenu.razor
@@ -24,11 +24,9 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Anime
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="add-anime">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Add Anime
-            </NavLink>
-        </div>
+        <MudNavLink Href="/">Home</MudNavLink>
+        <MudNavLink Href="/anime">Browse Anime</MudNavLink>
+
     </nav>
 </div>
 
