--- a/AnimeHubClient/wwwroot/css/app.css
+++ b/AnimeHubClient/wwwroot/css/app.css
@@ -9,41 +9,47 @@
     transition: transform 0.3s ease;
 }
 
-.anime-card:hover {
-    transform: translateY(-5px);
-}
+    .anime-card:hover {
+        transform: translateY(-5px);
+    }
 
 /* Overlay effect */
-.anime-card .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
+.card-image-container {
+    position: relative;
     width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-    opacity: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    transition: opacity 0.3s ease;
-    cursor: pointer;
+    height: 250px;
+    overflow: hidden;
 }
 
-.anime-card:hover .overlay {
-    opacity: 1;
-}
+    .card-image-container .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.6);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+    }
 
-.overlay-content {
-    text-align: center;
-    padding: 10px;
-}
+    .card-image-container:hover .overlay {
+        opacity: 1;
+    }
 
 .text-ellipsis {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.detail-image-wrapper img {
+    border-radius: 8px;
+    display: block;
+}
+
 
 
 
