Implementing File upload

--- a/AnimeHubClient/Layout/MainLayout.razor
+++ b/AnimeHubClient/Layout/MainLayout.razor
@@ -12,11 +12,11 @@
 <MudSnackbarProvider />
 
 <div class="page">
-    <div class="navbar">
-        <TopNav />
+    <div class="sidebar">
+        <NavMenu />
     </div>
 
-    <main>
+    <main class="mt-4">
         <article class="content px-4">
             @Body
         </article>
