--- a/AnimeHubClient/Pages/Anime/Details.razor
+++ b/AnimeHubClient/Pages/Anime/Details.razor
@@ -24,10 +24,10 @@
                     <MudText Typo="Typo.body1" Class="mb-3">@Anime.Description</MudText>
 
                     <MudText Typo="Typo.subtitle2">
-                        <b>Author:</b> @Anime.Author
+                        <b>Author:</b> @Anime.Studio
                     </MudText>
                     <MudText Typo="Typo.subtitle2">
-                        <b>Year Published:</b> @Anime.YearPublished
+                        <b>Priemered:</b> @Anime.PremieredYear
                     </MudText>
                     <MudText Typo="Typo.subtitle2">
                         <b>Episodes:</b> @Anime.Episodes
