--- a/AnimeHubClient/Pages/Anime/AnimeList.razor
+++ b/AnimeHubClient/Pages/Anime/AnimeList.razor
@@ -31,12 +31,10 @@ else
                     <tr>
                         <th>Title</th>
                         <th>Episodes</th>
-                        <th>Year</th>
+                        <th>Priemered</th>
+                        <th>Status</th>
                         <th>Category</th>
                         <th>Genres</th>
-                        @* <th>Description</th> *@
-                        @* <th>Author</th> *@
-                        @* <th>Image</th> *@
                         <th>Rating</th>
                         <th></th>
                     </tr>
@@ -47,12 +45,10 @@ else
                         <tr>
                             <td>@anime.Title</td>
                             <td>@anime.Episodes</td>
-                            <td>@anime.YearPublished</td>
+                            <td>@anime.PremieredYear</td>
+                            <td>@anime.Status</td>
                             <td>@anime.CategoryName</td>
                             <td>@string.Join(", ", @anime.Genres)</td>
-                            @* <td>@anime.Description</td> *@
-                            @* <td>@anime.Author</td> *@
-                            @* <td>@anime.ImageUrl</td> *@
                             <td>@anime.Rating</td>
                             <td>
                                 <a href="@($"anime/update/{anime.Id}")" class="btn btn-primary"><i class="bi bi-pencil-square"></i> Edit</a>
